--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,7 +32,7 @@
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: IRANSansX, "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-family: IYekan,IRANSansX, "Trebuchet MS", Arial, Helvetica, sans-serif;
   // box-sizing: border-box;
 }
 
