--- a/src/app/sod-banki/sod-banki.component.html
+++ b/src/app/sod-banki/sod-banki.component.html
@@ -1,22 +1,46 @@
 <div class="container">
   <div class="form-box" [formGroup]="bankInterest">
     <div class="input-box">
-      <input class="input mandatory" type="nuberic" name="years" id="years" placeholder=" " formControlName="yaers">
-      <label for="years">
-        سال باز پرداخت
+      <input class="input mandatory" type="nuberic" name="loanName" id="loanName" placeholder=" " formControlName="loanName">
+      <label for="loanName">
+       نام وام
       </label>
     </div>
     <div class="input-box">
-      <input class="input" type="nuberic" name="payPerMonth" id="payPerMonth" placeholder=" " formControlName="payPerMonth">
-      <label for="payPerMonth">
-        مبلغ قسط ماهانه
+      <input class="input mandatory" type="nuberic" name="loan" id="loan" placeholder=" " formControlName="loan">
+      <label for="loan">
+       مبلغ کل وام
       </label>
     </div>
+    <div class="info" *ngIf="bankInterest.controls['loan'].value" >
+      {{bankInterest.controls['loan'].value | number :'3.'}} تومان
+    </div>
+    <div class="input-box">
+      <input class="input mandatory" type="nuberic" name="years" id="years" placeholder=" " formControlName="years" max="10">
+      <label for="years">
+        سال باز پرداخت
+      </label>   
+    </div>
+    <div class="info" *ngIf="bankInterest.controls['years'].value" >
+      {{bankInterest.controls['years'].value}} سال
+    </div>  
     <div class="input-box">
       <input class="input mandatory" type="nuberic" name="profit" id="profit" placeholder=" " formControlName="profit">
       <label for="profit">
         سود سالانه
       </label>
+    </div>
+    <div class="info" *ngIf="bankInterest.controls['profit'].value" >
+      {{bankInterest.controls['profit'].value}} درصد
+    </div>
+    <div class="input-box">
+      <input  class="input" type="nuberic" name="payPerMonth" id="payPerMonth" placeholder=" " formControlName="payPerMonth">
+      <label for="payPerMonth">
+        مبلغ قسط ماهانه
+      </label>
+    </div>
+    <div class="info" *ngIf="bankInterest.controls['payPerMonth'].value" >
+      {{bankInterest.controls['payPerMonth'].value | number :'3.'}} تومان
     </div>
     <div class="input-box"
     ><button class="btn" (click)="calc()" [disabled]="" >
